minor fixes, added codebox

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
       JavaScript learning and my work at TPR." />
     <script src="https://kit.fontawesome.com/25c5c1e8c2.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <title>Personal Blog | Alexander Beesley</title>
   </head>
   <body>
