--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/25c5c1e8c2.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta name="Alexander Beesley - Personal Blog"
       content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
       JavaScript learning and my work at TPR." />
