Fixed Lighthouse recommendations.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
     JavaScript learning and my work at TPR." />
     <script src="https://kit.fontawesome.com/25c5c1e8c2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <title>Personal Blog | Alexander Beesley</title>
   </head>
   <body>
