Google Site verify #2

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
   <meta name="Alexander Beesley - Personal Blog" content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
     JavaScript learning and my work at TPR." />
+    <meta name="google-site-verification" content="CtdY2m3CXuZOaTjWT4GMO7gH3_S_OoxwdJlGHeYZnMM" />
   <script src="https://kit.fontawesome.com/25c5c1e8c2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin" />
