--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
-  <meta name="Alexander Beesley - Personal Blog" content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
-    JavaScript learning and my work at TPR." />
-    <meta name="google-site-verification" content="CtdY2m3CXuZOaTjWT4GMO7gH3_S_OoxwdJlGHeYZnMM" />
-  <script src="https://kit.fontawesome.com/25c5c1e8c2.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin" />
-  <title>Personal Blog | Alexander Beesley</title>
-</head>
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=0"
+    />
+    <meta
+      name="Alexander Beesley - Personal Blog"
+      content="A blog using ReactJS showcasing C# .NET, HTML, CSS and 
+    JavaScript learning and my work at TPR."
+    />
+    <meta
+      name="google-site-verification"
+      content="CtdY2m3CXuZOaTjWT4GMO7gH3_S_OoxwdJlGHeYZnMM"
+    />
+    <script
+      src="https://kit.fontawesome.com/25c5c1e8c2.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin"
+    />
+    <title>Personal Blog | Alex Beesley</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
